force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/acn_ttn__Reference_Field_Detail__c.object-meta.xml
<CustomObject>
    <label>Reference Field Detail</label>
    <nameField>
        <displayFormat>RFD-{00000}</displayFormat>
        <label>Reference Field Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Field Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>