force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__Count_of_Reference__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Count_of_Reference__c</fullName>
    <label>Count of Reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>