force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Field_Data_Type__c</fullName>
    <label>Field Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>