force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__Field_Utilization_Error_log__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Field_Utilization_Error_log__c</fullName>
    <label>Field Utilization Error log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>