force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__InActive_Users__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__InActive_Users__c</fullName>
    <description>contains users that haven&apos;t logged in from long period of time</description>
    <label>InActive Users</label>
    <length>27680</length>
    <type>LongTextArea</type>
</CustomField>