force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ObjectId__c</fullName>
    <label>ObjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>