force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__Percentage_Utilization__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Percentage_Utilization__c</fullName>
    <formula>(acn_ttn__Field_Record_Count__c/acn_ttn__Total_Records__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Utilization</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>