force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__PermissionSetAPIName__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__PermissionSetAPIName__c</fullName>
    <label>PermissionSetAPIName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>