force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__ProfileUserCount__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ProfileUserCount__c</fullName>
    <label>ProfileUserCount</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>