force-app/main/default/objects/acn_ttn__Reference_Field_Detail__c/fields/acn_ttn__Total_Profile_Count__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Total_Profile_Count__c</fullName>
    <label>Total Profile Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>